style.css
/* ... */
.desktop-nav {
  background-color: #3e3c3c;
  display: none;
}

.desktop-profession {
  display: none;
}

@media screen and (min-width: 768px) {
  .hamburger {
    display: none;
  }

  .desktop-nav {
    display: flex;
    align-self: center;
    justify-content: space-around;
  }

  .nav-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    padding: 15px;
  }

  .nav-menu {
    display: flex;
    color: #fff;
    font-size: 15px;
    font-family: "Inter", sans-serif;
  }

  .desktop-nav .link {
    color: #fff;
    margin: 16px 16px;
  }

  /* main-container */

  .main-container {
    display: grid;
    grid-template-columns: 1fr 1fr;
  }

  .para-container {
    width: 90%;
    margin: 5% 5%;
  }

  .primary h1 {
    margin-top: 192px;
    font-size: 72px;
    font-family: "crete", sans-serif;
    line-height: 81.5px;
    font-weight: 400;
  }

  .primary-text h2 {
    font-family: "inter", sans-serif;
    font-size: 32px;
  }

  .img-cont {
    background-image: url(./images/media.png);
    background-repeat: no-repeat;
    background-size: cover;
    height: 90%;
    width: 100%;
    margin-bottom: 45px;
    align-items: flex-end;
  }

  form > ul {
    max-width: 88%;
    list-style: none;
  }

  form ul {
    margin: 0 auto;
    max-width: 88%;
    list-style: none;
  }

  .social-media-icon ul {
    display: grid;
    float: left;
    position: absolute;
    left: 2%;
    top: 310px;
    gap: 12px;
  }

  .multi img {
    width: 80%;
    height: auto;
    margin-left: 50px;
  }

  .recent img {
    margin-top: 15%;
    width: 80%;
  }

  .social-media-icon ul img {
    width: 24px;
    height: 30px;
  }

  .primary-text {
    display: flex;
    flex-direction: column;
    width: 50%;
    gap: 0.5rem;
    position: absolute;
    left: 10%;
  }

  article p {
    font-family: "inter", sans-serif;
  }

  .primary-text p {
    font-size: 20px;
    font-weight: 400;
    font-family: "inter", sans-serif;
    line-height: 36px;
    max-width: 65%;
  }

  /* recent-works */

  .multi {
    display: grid;
    grid-template-columns: 70% 30%;
    gap: 24px;
    width: 80%;
  }

  .recent {
    display: grid;
    grid-template-columns: 30% 70%;
    align-content: center;
    place-items: center;
  }

  /* desktop-profession */

  .prof {
    display: none;
  }

  .desktop-profession {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    width: 75%;
    margin-left: 50px;
  }

  .desktop-profession .img-profession {
    background-image: url(./images/profession-1.png);
    background-repeat: no-repeat;
    background-size: cover;
    width: 369px;
    margin: 24px 16px 37px 2px;
    background-position-y: bottom center;
    height: 435px;
  }

  .desktop-profession .img-profession .img-profession-btn {
    background-repeat: no-repeat;
    background-size: cover;
    width: 369px;
    margin: 24px 16px 37px 2px;
    background-position-y: bottom center;
  }

  .btn-project-btn {
    position: relative;
    bottom: -350px;
    background: #ff6b00;
    font-family: inherit;
    font-size: 17px;
    font-weight: 700;
    width: 369px;
    height: 48px;
    margin-bottom: -200px;
    border: none;
    color: #fff;
  }

  .data-profession {
    background-image: url(./images/profession-2.png);
    background-repeat: no-repeat;
    background-size: cover;
    width: 369px;
    margin: 24px 16px 37px 2px;
  }

  .data h1 {
    color: #fff;
    font-family: "Crete Round", serif;
    font-size: 32px;
    line-height: 44px;
    margin: 174px 16px 16px 24px;
  }

  .data p {
    font-family: "inter", sans-serif;
    font-size: 17px;
    font-weight: 400;
    line-height: 24px;
    margin-left: 16px;
    margin-right: 16px;
    margin-bottom: 24px;
  }

  .website-profession {
    background-image: url(./images/profession-3.png);
    background-repeat: no-repeat;
    background-size: cover;
    width: 369px;
    margin: 24px 16px 37px 2px;
  }

  .data h2 {
    color: #fff;
    font-family: "Crete Round", serif;
    font-size: 32px;
    line-height: 44px;
    margin: 221px 16px 16px 24px;
  }

  .art-profession {
    background-image: url(./images/profession-4.png);
    background-repeat: no-repeat;
    background-size: cover;
    width: 369px;
    height: 435px;
    margin: 24px 16px 37px 2px;
  }

  .data h3 {
    color: #fff;
    font-family: "Crete Round", serif;
    font-size: 32px;
    line-height: 44px;
    margin: 174px 16px 16px 24px;
  }

  .data {
    height: 435px;
  }

  /* ----------------------about-me section--------------------------------- */

  .about-me {
    display: grid;
    grid-template-columns: 1fr 1fr;
    background-image: none;
    margin: 0;
    width: 100%;
  }

  .about-me-d {
    margin-left: 142px;
  }

  .about-me-d h5 {
    font-family: "Crete Round", serif;
    font-size: 72px;
    line-height: 81.5px;
    vertical-align: top;
  }

  .about-me p {
    font-family: "Inter", sans-serif;
    font-size: 20px;
    line-height: 32px;
    vertical-align: top;
  }

  .bg {
    background-image: url(./images/about-me-img.svg);
    background-repeat: no-repeat;
    background-size: cover;
    margin-left: 100px;
    min-height: calc(50vh - 24px);
  }

  .skills {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    background-color: #1c1a19;
    text-align: center;
    padding-top: 60px;
    margin-bottom: 0;
  }

  .form-form {
    display: grid;
    grid-template-columns: 1fr 1fr;
  }

  .interest {
    margin-top: 130px;
    margin-left: 135px;
  }

  .form-inputs {
    color: #505f79;
    margin-top: 130px;
  }

  .form-list input {
    font-size: 3px;
  }

  .social-media-icon-2 {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 100%;
  }

  .social-media-icon-2 hr {
    width: 100%;
  }

  .social-media-icon-2 ul {
    display: flex;
    gap: 15px;
  }
}

